--- a/SpringBoot_MyBatis_Cafe2/pom.xml
+++ b/SpringBoot_MyBatis_Cafe2/pom.xml
@@ -60,6 +60,13 @@
     <artifactId>json-simple</artifactId>
     <version>1.1.1</version>
 </dependency>
+    
+<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-devtools</artifactId>
+    <version>2.4.4</version>
+</dependency>
 
 	</dependencies>
 
