--- a/SpringBoot_MyBatis_Cafe2/pom.xml
+++ b/SpringBoot_MyBatis_Cafe2/pom.xml
@@ -68,6 +68,20 @@
     <version>2.4.4</version>
 </dependency>
 
+
+	    <dependency>
+	        <groupId>org.apache.tomcat.embed</groupId>
+	        <artifactId>tomcat-embed-jasper</artifactId>
+	        <scope>provided</scope>
+	    </dependency>
+	    <dependency>
+	        <groupId>jstl</groupId>
+	        <artifactId>jstl</artifactId>
+	        <version>1.2</version>
+	    </dependency>
+
+
+
 <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple --> 
 
 <dependency> 
