--- a/SpringBoot_MyBatis_Cafe2_EC2/src/main/resources/application.properties
+++ b/SpringBoot_MyBatis_Cafe2_EC2/src/main/resources/application.properties
@@ -5,8 +5,8 @@ server.servlet.session.timeout=1800
 
 
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@13.125.62.95:41521:XE
-spring.datasource.username=cafe2
+spring.datasource.url=jdbc:oracle:thin:@54.83.91.161/:41521:XE
+spring.datasource.username=shotting
 spring.datasource.password=1234
 
 
